# SPADES

./: Docker.md  Dockerfile  LICENSE  README.md  environment.yml  post_install.sh  run_SPADES.sh
.github/workflows/: README.md  docker-build.yml  docker-test.yml  test.yml
GOTTCHA2-main/: README.md  pyproject.toml  setup.py
GOTTCHA2-main/.github/workflows/: gottcha.yml
GOTTCHA2-main/docs/: tutorial.md
GOTTCHA2-main/gottcha/: __init__.py  gottcha2.py
GOTTCHA2-main/gottcha/utils/: aggregate_results.py  download.py  extract_reads.py  gottcha2.py  gottcha_sam_to_bam.py  ont_utils.py  prefilter.py  process_bam.py  profile.py  read_mapping.py  report.py  sam_to_bam.py  sig_archive.py
GOTTCHA2-main/test/: test_extract_reads_unit.py  test_gottcha2_cli_unit.py  test_ont_utils_unit.py  test_profile_unit.py
data/: bacteria_human_pathogens.tsv  pathogen.tsv
scripts/: check_install.sh  coverage_browser.py  pathogen.py  result_viewer.py  taxonomy.py
test/: test_run.sh
test/gottcha2_database_test/: aoi_list.txt  gottcha_db.species.fna.stats  gottcha_db.species.fna.syldb  gottcha_db.species.fna.tax.tsv
